# ElevatorSimu

./: ._CMakeLists.txt  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
